# Slot-shifting-in-LITMUS-RT-Kernel-2.6

./: README.md
documentations/: Architecture  HLO-LITMUSRT-p_res.docx  SLOT-SHIFTING.docx  SS_PARSER_DESIGN.txt  SS_table_definition.txt  STATE_CHART.dia  STATE_CHART.dia.autosave  TODO  architecture_Overview.dia  litmus_offline_stage.txt  online_sc_calculation.txt  planned_implementation_v0.1.txt  planned_implementation_v1.txt  usage_overview.dia
documentations/debug_and_test/: ctest_using.txt  litmus_debugging.txt
documentations/wip-reservations/: adapting_wip-reservations.txt  wip-reservations.txt
kernel/: config_rts
kernel/include/litmus/: litmus.h  polling_reservations.h  reservation.h  rt_param.h  sched_plugin.h  sched_prm.h  ss_inj_data.h  ss_reservations.h  trace.h  unistd_32.h  unistd_64.h
kernel/litmus/: Makefile  aperiodic_simulator.c  g.vim  jobs.c  litmus.c  polling_reservations.c  reservation.c  sched_plugin.c  sched_pres.c  sched_prm.c  sched_ss.c  ss_reservations.c  sync.c  temp.txt
qemu/: create_img.sh  qemu.sh  qemu_ubuntu.sh
user_space/feather-trace-tools/: Makefile
user_space/liblitmus/: Makefile
user_space/liblitmus/include/: .litmus.h.swp  litmus.h
user_space/offline_phase/src/: .cproject  .project  CMakeLists.txt  algo.txt  app.cpp  app.h  edge.h  interval.h  main.cpp  msg.h  myfile.txt  outFileGenerator.cpp  outFileGenerator.h  parsetext.c  pg.h  task.h  todo
user_space/ss_parser/: DESIGN.txt  Makefile  README~  TABLE_DEFINITION.txt  temp (1)  temp_bk
user_space/ufs/: initramfs.igz  mk_eus.sh
user_space/ufs/initramfs/: init
(+302 files in other folders)
